fix(privacy): add word-wrap

--- a/src/app/(privacy)/privacy/layout.module.css
+++ b/src/app/(privacy)/privacy/layout.module.css
@@ -3,4 +3,5 @@
   display: grid;
   grid-template-columns: 100%;
   justify-items: center;
+  word-wrap: break-word;
 }
